<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:gravity="center_horizontal|center" android:layout_gravity="center_horizontal|center">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/general"
	android:orientation="horizontal"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:paddingRight="4px" 
	android:paddingLeft="10px" android:paddingTop="7px">
		<TextView
		    xmlns:android="http://schemas.android.com/apk/res/android"
    		android:id="@+id/lblPassOld"    
    		android:layout_height="25px" 
    		android:text="@string/lblOldPass" 
    		android:layout_width="wrap_content"
    		style="@style/GlobalLabel" android:width="100px"/>
    	<EditText 
    		android:id="@+id/txtOldPass" 
    		android:text=""     		
    		android:layout_width="150px" 
    		android:layout_height="wrap_content" 
    		android:password="true"    		
    		> 	
    	</EditText>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/general"
	android:orientation="horizontal"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:paddingRight="4px" 
	android:paddingLeft="10px" android:paddingTop="7px">
		<TextView
		    xmlns:android="http://schemas.android.com/apk/res/android"
    		android:id="@+id/lblNewPass"    
    		android:layout_height="25px" 
    		android:text="@string/lblNewPass" 
    		android:layout_width="wrap_content"    		
    		style="@style/GlobalLabel" android:width="100px"/>
    	<EditText 
    		android:id="@+id/txtNewPass" 
    		android:text=""     		
    		android:layout_width="150px" 
    		android:layout_height="wrap_content"     		
    		android:password="true"> 	
    	</EditText>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/general"
	android:orientation="horizontal"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:paddingRight="4px" 
	android:paddingLeft="10px" android:paddingTop="7px">
		<TextView
		    xmlns:android="http://schemas.android.com/apk/res/android"
    		android:id="@+id/lblRepPass"    
    		android:layout_height="25px" 
    		android:text="@string/lblRepPass" 
    		android:layout_width="wrap_content"
    		style="@style/GlobalLabel" android:width="100px"/>
    	<EditText 
    		android:id="@+id/txtRepPass" 
    		android:text=""     		
    		android:layout_width="150px" 
    		android:layout_height="wrap_content"
    		android:password="true" 
    		> 	
    	</EditText>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/general"
	android:orientation="horizontal"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:paddingRight="4px" 
	android:paddingLeft="10px" 
	android:paddingTop="7px" 
	android:gravity="center_horizontal|center">
		<Button 
	    	android:text="@string/btnChangePass" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content" 
	    	android:id="@+id/btnChangePass" 
	    	>
		</Button>
	</LinearLayout>
    
</LinearLayout>
